sfdx/force-app/main/default/objects/Approver_Role__mdt/Approver_Role__mdt.object-meta.xml
<CustomObject>
    <label>Approver Role</label>
    <pluralLabel>Approver Roles</pluralLabel>
</CustomObject>