sfdx/force-app/main/default/objects/Approver_Role__mdt/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <label>Notification Email</label>
    <type>Email</type>
    <required>true</required>
</CustomField>