sfdx/force-app/main/default/objects/Approver_Role__mdt/fields/Queue_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Developer_Name__c</fullName>
    <label>Queue Developer Name (optional)</label>
    <length>120</length>
    <type>Text</type>
</CustomField>