sfdx/force-app/main/default/objects/Approver_Role__mdt/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <label>Role Name</label>
    <length>120</length>
    <type>Text</type>
    <required>true</required>
</CustomField>